app/base/monitoring/tempo/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tempo
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/tempo`)
      kind: Rule
      services:
        - name: tempo
          port: 3200
      middlewares:
        - name: tempo-strip-prefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tempo-strip-prefix
  namespace: monitoring
spec:
  stripPrefix:
    prefixes:
      - /tempo
